CompletableFuture-thenCompose, thenCombine,allOf, anyOf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=CompletableFuture
+spring.datasource.url=jdbc:mysql://localhost:3306/employeecompletablefuture?useSSL=true
+spring.datasource.username=root
+spring.datasource.password=Sample@2025
+
+# JPA and Hibernate settings
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = false
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+server.port=9191
